# dawg

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/audio/: io.rs  monitor.rs  play.rs  record.rs
src/midi/: capture.rs  list.rs
src/synth/: live.rs  simple.rs
